--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <body>
         <div id="map"></div>
         
+        <!-- Turf -->
+        <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
+        
+        <!-- Map script -->
         <script src="./js/map.js" type="module"></script>
     </body>
 </html>
