--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
                     <label for="stats-select">Statistics:</label>
                     <select name="statistics" id="stats-select"></select>
                 </div>
+
+                <div class="filter-group">
+                    <label for="layer-select">Layers:</label>
+                    <select name="layers" id="layer-select">
+                        <option value="state" selected>States</option>
+                        <option value="county">Counties</option>
+                    </select>
+                </div>
             </fieldset>
         </div>
         
