update control styles for white background

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link href='https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.css' rel='stylesheet' />
     </head>
     <body>
-        <div id="map-filters">
+        <div id="map-filters" class="map-ctrl">
             <fieldset>
                 <div class="filter-group">
                     <label for="status-select">Status:</label>
