move accestoken outside of map.js

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
         <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.2/mapbox-gl-geocoder.min.js"></script>
         <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.2/mapbox-gl-geocoder.css" type="text/css">
 
+        <script>mapboxgl.accessToken = 'pk.eyJ1IjoibGFuZHN0YXRzIiwiYSI6ImNseGtxc29kcDA0MnIya3BuNHF2dGRnMjQifQ.8-ZuwhoBi64bS0L1eG9Maw';
+        </script>
         <!-- Map script -->
         <script src="./js/map.js" type="module"></script>
 
